[tool.poetry]
name = "lbs-helper"
version = "1.1.0"
description = ""
authors = ["webclerk <webclerk@gmail.com>"]

[[tool.poetry.source]]
name = "baidu"
url = "https://mirror.baidu.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pydantic = "^1.8.2"
requests = "^2.26.0"
orjson = "^3.6.1"
toml = "^0.10.2"
arrow = "^1.1.1"
Flask-Cors = "^3.0.10"
simplejson = "^3.17.3"
psycopg2 = "^2.9.1"
matplotlib = "^3.4.3"
bokeh = "^2.3.3"
holoviews = "^1.14.5"

[tool.poetry.dev-dependencies]
pylint = "^2.8.1"
mypy = "^0.812"
pytest = "^6.2.4"
black = "^21.5b1"
autopep8 = "^1.5.6"
isort = "^5.8.0"
pip = "^21.1.3"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
